# yinx

./: .gitignore  Cargo.toml  LICENSE  README.md
config-templates/: entities.toml  filters.toml  tools.toml
docs/: MODELS.md  QUICKSTART.md
plan/: ANTI-PATTERNS.md  ARCHITECTURE.md  PLAN.md  PROGRESS.md
shell/: README.md  bash-script-wrapper.sh  bash.sh  zsh.sh
src/: error.rs  lib.rs  main.rs
src/cli/: mod.rs
src/config/: mod.rs  validator.rs
src/daemon/: ipc.rs  mod.rs  pipeline.rs  process.rs  signals.rs
src/embedding/: batch.rs  keyword_index.rs  mod.rs  provider.rs  vector_index.rs
src/entities/: extractor.rs  graph.rs  metadata.rs  mod.rs
src/filtering/: mod.rs  tier1.rs  tier2.rs  tier3.rs  types.rs  utils.rs
src/patterns/: mod.rs
src/retrieval/: deduplication.rs  fusion.rs  hybrid.rs  mod.rs  provenance.rs  reranker.rs
src/session/: mod.rs
src/storage/: blob.rs  database.rs  mod.rs
tests/: daemon_integration.rs  inject_test_data.sh  storage_integration.rs  test_database.rs  test_entity_extraction.rs  test_entity_integration.rs  test_filtering_integration.rs  test_phase5_manual.sh  test_phase6_embedding_integration.rs  test_retrieval_integration.rs
