[package]
name = "yinx"
version = "0.1.0"
edition = "2021"
authors = ["neur0map"]
license = "Apache-2.0"
description = "Intelligent penetration testing companion with optional AI-powered analysis"
repository = "https://github.com/neur0map/yinx"

[dependencies]
# CLI
clap = { version = "4.5", features = ["derive"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
uuid = { version = "1.10", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"
dirs = "5.0"
regex = "1.10"
ahash = "0.8"

# Storage (Phase 2)
rusqlite = { version = "0.31", features = ["bundled"] }
blake3 = "1.5"
zstd = "0.13"
r2d2 = "0.8"
r2d2_sqlite = "0.24"

# Async runtime and daemon (Phase 3)
tokio = { version = "1.40", features = ["full", "rt-multi-thread", "macros", "signal", "net", "io-util", "time"] }
daemonize = "0.5"
nix = { version = "0.29", features = ["signal", "process"] }

# Embedding and Indexing (Phase 6)
fastembed = "4.3"
hnsw_rs = "0.3"
tantivy = "0.22"
ndarray = "0.16"

[dev-dependencies]
tempfile = "3.14"
